--- a/Pages/Order/Index.cshtml
+++ b/Pages/Order/Index.cshtml
@@ -19,8 +19,8 @@
                 <p><strong>Status:</strong> <span class="status delivered">Delivered</span></p>
             </div>
             <div class="order-products">
-                <img src="/images/product1.jpg" alt="Product 1" />
-                <img src="/images/product2.jpg" alt="Product 2" />
+                <img src="/images/1.jpg" alt="Product 1" />
+                <img src="/images/2.jpg" alt="Product 2" />
             </div>
             <div class="order-actions">
                 <a href="/Order/Details/12345" class="btn-primary">View Details</a>
@@ -36,7 +36,7 @@
                 <p><strong>Status:</strong> <span class="status shipped">Shipped</span></p>
             </div>
             <div class="order-products">
-                <img src="/images/product3.jpg" alt="Product 3" />
+                <img src="/images/3.jpg" alt="Product 3" />
             </div>
             <div class="order-actions">
                 <a href="/Order/Details/12346" class="btn-primary">View Details</a>
